--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -10,27 +10,26 @@
 
 .submit-button {
   font-family: 'Montserrat', sans-serif;
-  padding: 10px;
+  padding: 20px;
   background-color: #db3b61;
   color: white;
   border-radius: 3px;
   &:hover {
-    background-color: blue;
+    background-color: green;
   }
 }
 
 
 .submit-text {
-  padding: 10px;
+  padding: 20px;
   background-color: white;
   color: black;
-  border-radius: 3px;
 }
 
 .container {
   width: 600px;
   border-radius: 3px;
-  padding: 20px;
+  padding: 10px;
   display: center;
   background-color: #e2e2e2;
   box-shadow: 0.5px 0.5px #eae3e3;
